// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Observability App Component Snapshots matches snapshot on authenticated state 1`] = `
<div
  class="gl-border-1 gl-border-default gl-border-solid gl-grow gl-h-full gl-overflow-hidden gl-rounded-base"
>
  <iframe
    class="gl-h-full gl-w-full"
    frameborder="0"
    sandbox="allow-same-origin allow-scripts allow-forms allow-downloads allow-popups"
    src="https://o11y.gitlab.com/traces-explorer"
    style=""
    title="Observability"
  />
</div>
`;

exports[`Observability App Component Snapshots matches snapshot on error state 1`] = `
<div
  class="gl-border-1 gl-border-default gl-border-solid gl-grow gl-h-full gl-overflow-hidden gl-rounded-base"
>
  <gl-alert-stub
    class="gl-m-5"
    data-testid="o11y-error-status"
    dismisslabel="Dismiss"
    politeness="polite"
    primarybuttonlink=""
    primarybuttontext=""
    secondarybuttonlink=""
    secondarybuttontext=""
    title=""
    variant="danger"
  >
    Authentication failed. Please refresh the page.
  </gl-alert-stub>
  <iframe
    class="gl-h-full gl-w-full"
    frameborder="0"
    sandbox="allow-same-origin allow-scripts allow-forms allow-downloads allow-popups"
    src="https://o11y.gitlab.com/traces-explorer"
    style="display: none;"
    title="Observability"
  />
</div>
`;

exports[`Observability App Component Snapshots matches snapshot while loading 1`] = `
<div
  class="gl-border-1 gl-border-default gl-border-solid gl-grow gl-h-full gl-overflow-hidden gl-rounded-base"
>
  <div
    class="gl-flex gl-flex-col gl-font-semibold gl-h-full gl-items-center gl-justify-center gl-leading-36 gl-mb-0 gl-mt-0 gl-text-size-h-display"
  >
    <observability-loading-stub
      data-testid="o11y-loading-status"
    />
    <div
      class="gl-invisible gl-max-w-lg gl-mb-2 gl-mt-4 gl-mx-auto gl-text-center o11y-status"
    >
      <p
        class="gl-mb-0 gl-mt-4"
      >
        <span
          class="gl-font-semibold gl-leading-36 gl-text-size-h-display"
        >
          Initializing your Observability service
        </span>
        <br />
        <span
          class="gl-text-md gl-text-subtle"
        >
          Configuring authentication
        </span>
      </p>
    </div>
  </div>
  <iframe
    class="gl-h-full gl-w-full"
    frameborder="0"
    sandbox="allow-same-origin allow-scripts allow-forms allow-downloads allow-popups"
    src="https://o11y.gitlab.com/traces-explorer"
    style="display: none;"
    title="Observability"
  />
</div>
`;
